# vpn-bot

./: .gitignore  .pre-commit-config.yaml  alembic.ini  config.py  login_client.py  main.py  menu_markups.py  models.py  pyproject.toml  requirements.txt  schemas.py  shell.py  token.env
app/: __init__.py  __main__.py  login_client.py  schemas.py  shell.py
app/db/: config.py  models.py  repository.py
app/dependencies/: auth.py  log_filters.py  logging_settings.py
app/handlers/: __init__.py  admin_private.py  user_private.py
app/kbds/: menu_markups.py  reply.py
app/middlewares/: api.py  database.py
app/migrations/: env.py
app/migrations/versions/: 795c2f417c56_.py  85c92f8f5ad6_.py
db/: config.py  models.py  repository.py
dependencies/: auth.py
handlers/: user_private.py
kbds/: menu_markups.py
middlewares/: api.py  database.py
migrations/: env.py
migrations/versions/: 173fd3214ee6_add_user_model.py  4e49859dd9c6_.py  a805fced51cd_.py  bfa152d98944_.py  c412f6fd2e7d_added_user_table.py
