[project]
name = "tbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "dotenv>=0.9.9",
    "pydantic>=2.10.6",
    "sqlalchemy[asyncio]>=2.0.38",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
]
