[project]
name = "tbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.4.2",
    "aiogram>=3.20.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "pydantic>=2.11.4",
    "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
